# ogltest

./: .gitignore  SConstruct  _readme  main.cpp  program.cpp  program.h  readme  readme.md  simple.vs
agl/android-template/: CMakeLists.txt  android-arm.cmake  android-x86.cmake  build-arm.sh  build.sh  main.cpp  readme
agl/android-template/android/: AndroidManifest.xml  build.gradle
agl/android-template/android/src/org/example/: MainActivity.java
agl/android-template/android/src/org/libgl/view/: GLSurfaceViewImpl.java
agl/android-template/libs/GL/: glew.h
agl/android-template/libs/gl/: window.hpp
androidgl/: CMakeLists.txt  android-x86.cmake  build-arm.sh  build.sh
androidgl/androidgl/: android_window.cpp  android_window.hpp
androidgl/java/org/libgl/wrapper/: NativeScene.java
androidgl/libs/gl/: CMakeLists.txt
androidgl/libs/gles2/: CMakeLists.txt
androidgl/libs/physics/: CMakeLists.txt
animation/: .gitignore  SConstruct  animation.cpp  animation.hpp  controllers.hpp  md5.cpp  md5_skinning.glsl  md5demo.cpp  md5loader.cpp  mesh.cpp  mesh.hpp  mesh_exp.cpp  mesh_exp.hpp  program.cpp  readme  test_lines_mesh.cpp  textured_model.cpp  textured_model_normal.cpp  textured_model_textured.cpp  view.glsl  viewmodel.cpp
blur/: SConstruct  blur.cpp  edge.cpp  edge.glsl  mesh.cpp  test_offrender.cpp  window.hpp
buffer/: SConstruct  notes.txt  vao.cpp
camera/: SConstruct  camera.cpp  camera.h  free_camera.cpp  free_camera.h  main.cpp  program.cpp  readme.txt  test_angles.cpp  test_plane.cpp  test_volume.cpp  test_yaw_pitch_roll  test_yaw_pitch_roll.cpp
cube/: SConstruct  program.cpp  readme.txt  simple.vs
current/: SConstruct  framebuffer.h  glut_window.cpp  mesh.h  meshbuffers.cpp  program.h  window.h
doc/: Doxyfile  readme
filter/: SConstruct  blur.cpp  blur.glsl  camera.cpp  camera.hpp  edge.cpp  edge.glsl  program.cpp  program.hpp  show.glsl  texture.cpp  texture.hpp  window.hpp
gl/: .gitignore  SConstruct  __model.cpp  __model.hpp  camera.cpp  camera.hpp  controllers.hpp  dtools.cpp  frustum.cpp  frustum.hpp  image.cpp  label.hpp  mesh.cpp  mesh.hpp  program.cpp  readme  scene_object.cpp  scene_object.hpp  test_frustum.cpp  test_image.cpp  test_mesh_plane_xy.cpp  test_offrender.cpp  test_phong.cpp  test_texture.cpp  (+8 more)
playground/wolf3d_android/native/libs/al/: CMakeLists.txt  vorbis.cpp  waveform.hpp
playground/wolf3d_android/native/libs/gles2/: CMakeLists.txt  default_shader_gles2.hpp  light_gles2.cpp  light_gles2.hpp  mesh_gles2.cpp  model_gles2.hpp  model_loader_gles2.cpp  model_loader_gles2.hpp  program_gles2.cpp  sprite_model_gles2.hpp
playground/wolf3d_android/native/libs/gles2/ui/: touch_button_gles2.cpp  touch_button_gles2.hpp  touch_event_gles2.hpp
samples/wolf3d_android/native/: CMakeLists.txt  android-arm.cmake  android-x86.cmake  enemy.cpp  level.cpp  player.cpp  player.hpp
samples/wolf3d_android/native/assets/blaster/: charge_up.md5anim  flashlight.md5anim  idle.md5anim  lower.md5anim  raise.md5anim
samples/wolf3d_android/native/assets/blaster/world/: idle.md5anim
samples/wolf3d_android/native/assets/shaders/: solid.glsl
samples/wolf3d_android/native/libs/al/: audio.hpp  blob_wave.hpp  vorbis.hpp
samples/wolf3d_android/native/libs/androidgl/: android_window.cpp
samples/wolf3d_android/native/libs/gl/: md5loader.cpp
samples/wolf3d_android/native/libs/gles2/: texture_loader_gles2.cpp
samples/wolf3d_android/native/libs/physics/: CMakeLists.txt  debug_draw_gles2.cpp
(+1324 files in other folders)
